--- a/src/main/resources/view/BooksManageForm.fxml
+++ b/src/main/resources/view/BooksManageForm.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.BooksManageFormController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
@@ -27,12 +26,16 @@
             <Label layoutX="129.0" layoutY="96.0" text="Author" />
             <TableView fx:id="tble" layoutY="200.0" prefHeight="200.0" prefWidth="600.0">
               <columns>
-                <TableColumn fx:id="colTitle" prefWidth="147.0" text="Title" />
-                <TableColumn fx:id="colAuthor" prefWidth="146.0" text="Author" />
-                  <TableColumn fx:id="colGenre" prefWidth="169.0" text="Genre" />
-                  <TableColumn fx:id="colAvailability" prefWidth="137.0" text="Availability" />
+                <TableColumn fx:id="colId" prefWidth="86.0" text="ID" />
+                <TableColumn fx:id="colTitle" prefWidth="100.0" text="Title" />
+                  <TableColumn fx:id="colAuthor" prefWidth="71.0" text="Author" />
+                  <TableColumn fx:id="colGenre" prefWidth="140.0" text="Genre" />
+                  <TableColumn fx:id="colAvailability" prefWidth="86.0" text="Availability" />
               </columns>
             </TableView>
+            <Button layoutX="512.0" layoutY="2.0" mnemonicParsing="false" onAction="#btnAddNewOnAction" text="Add New" />
+            <TextField fx:id="txtId" layoutY="74.0" promptText="Enter title" />
+            <Label layoutX="3.0" layoutY="53.0" text="Id" />
          </children>
       </AnchorPane>
    </children>
