--- a/src/main/resources/view/BooksManageForm.fxml
+++ b/src/main/resources/view/BooksManageForm.fxml
@@ -12,30 +12,32 @@
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
             <Label layoutX="248.0" layoutY="6.0" text="Books Managemrnt" />
-            <TextField fx:id="txtTitle" layoutX="129.0" layoutY="49.0" promptText="Enter title" />
+            <TextField fx:id="txtTitle" layoutX="124.0" layoutY="118.0" promptText="Enter title" />
             <TextField fx:id="txtAvailability" layoutX="350.0" layoutY="119.0" promptText="Enter availability status" />
-            <TextField fx:id="txtAuthor" layoutX="129.0" layoutY="119.0" promptText="Enter author " />
-            <TextField fx:id="txtGenre" layoutX="350.0" layoutY="49.0" promptText="Enter genre" />
-            <Button layoutX="181.0" layoutY="163.0" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" />
-            <Button layoutX="321.0" layoutY="163.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
-            <Button layoutX="243.0" layoutY="163.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
-            <Button layoutX="384.0" layoutY="163.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
-            <Label layoutX="129.0" layoutY="26.0" text="Title" />
-            <Label layoutX="351.0" layoutY="26.0" text="Genre" />
+            <TextField fx:id="txtAuthor" layoutX="124.0" layoutY="174.0" promptText="Enter author " />
+            <TextField fx:id="txtGenre" layoutX="350.0" layoutY="59.0" promptText="Enter genre" />
+            <Button layoutX="183.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" />
+            <Button layoutX="323.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
+            <Button layoutX="245.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
+            <Button layoutX="386.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
+            <Label layoutX="124.0" layoutY="95.0" text="Title" />
+            <Label layoutX="351.0" layoutY="36.0" text="Genre" />
             <Label layoutX="351.0" layoutY="96.0" text="Availability " />
-            <Label layoutX="129.0" layoutY="96.0" text="Author" />
-            <TableView fx:id="tble" layoutY="200.0" prefHeight="200.0" prefWidth="600.0">
+            <Label layoutX="129.0" layoutY="152.0" text="Author" />
+            <TableView fx:id="tble" layoutY="288.0" prefHeight="112.0" prefWidth="600.0">
               <columns>
-                <TableColumn fx:id="colId" prefWidth="86.0" text="ID" />
-                <TableColumn fx:id="colTitle" prefWidth="100.0" text="Title" />
-                  <TableColumn fx:id="colAuthor" prefWidth="71.0" text="Author" />
-                  <TableColumn fx:id="colGenre" prefWidth="140.0" text="Genre" />
-                  <TableColumn fx:id="colAvailability" prefWidth="86.0" text="Availability" />
+                <TableColumn fx:id="colId" prefWidth="78.0" text="ID" />
+                <TableColumn fx:id="colTitle" prefWidth="103.0" text="Title" />
+                  <TableColumn fx:id="colAuthor" prefWidth="101.0" text="Author" />
+                  <TableColumn fx:id="colGenre" prefWidth="120.0" text="Genre" />
+                  <TableColumn fx:id="colAvailability" prefWidth="109.0" text="Availability" />
+                  <TableColumn fx:id="colUserId" prefWidth="86.0" text="User ID" />
               </columns>
             </TableView>
-            <Button layoutX="512.0" layoutY="2.0" mnemonicParsing="false" onAction="#btnAddNewOnAction" text="Add New" />
-            <TextField fx:id="txtId" layoutY="74.0" promptText="Enter title" />
-            <Label layoutX="3.0" layoutY="53.0" text="Id" />
+            <TextField fx:id="txtId" layoutX="124.0" layoutY="60.0" promptText="Enter title" />
+            <Label layoutX="127.0" layoutY="39.0" text="Id" />
+            <TextField fx:id="txtUserId" layoutX="350.0" layoutY="174.0" promptText="Enter availability status" />
+            <Label layoutX="352.0" layoutY="152.0" text="User ID" />
          </children>
       </AnchorPane>
    </children>
