--- a/src/main/resources/view/BooksManageForm.fxml
+++ b/src/main/resources/view/BooksManageForm.fxml
@@ -16,10 +16,10 @@
             <TextField fx:id="txtAvailability" layoutX="350.0" layoutY="119.0" promptText="Enter availability status" />
             <TextField fx:id="txtAuthor" layoutX="124.0" layoutY="174.0" promptText="Enter author " />
             <TextField fx:id="txtGenre" layoutX="350.0" layoutY="59.0" promptText="Enter genre" />
-            <Button layoutX="182.0" layoutY="217.0" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" />
-            <Button layoutX="322.0" layoutY="217.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
-            <Button layoutX="244.0" layoutY="217.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
-            <Button layoutX="385.0" layoutY="217.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
+            <Button layoutX="147.0" layoutY="214.0" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" />
+            <Button layoutX="287.0" layoutY="214.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
+            <Button layoutX="209.0" layoutY="214.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
+            <Button layoutX="350.0" layoutY="214.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Remove" />
             <Label layoutX="124.0" layoutY="95.0" text="Title" />
             <Label layoutX="351.0" layoutY="36.0" text="Genre" />
             <Label layoutX="351.0" layoutY="96.0" text="Availability " />
@@ -34,11 +34,12 @@
                   <TableColumn fx:id="colUserId" prefWidth="86.0" text="User ID" />
               </columns>
             </TableView>
-            <TextField fx:id="txtId" layoutX="124.0" layoutY="60.0" onAction="#txtSearchOnAction" promptText="Enter title" />
+            <TextField fx:id="txtId" layoutX="124.0" layoutY="60.0" promptText="Enter title" />
             <Label layoutX="127.0" layoutY="39.0" text="Book ID" />
             <TextField fx:id="txtUserId" layoutX="350.0" layoutY="174.0" promptText="Enter availability status" />
             <Label layoutX="352.0" layoutY="152.0" text="User ID" />
             <Button layoutX="6.0" layoutY="11.0" mnemonicParsing="false" onAction="#btnHomeOnAction" text="Home" />
+            <Button layoutX="427.0" layoutY="214.0" mnemonicParsing="false" onAction="#txtSearchOnAction" text="Search" />
          </children>
       </AnchorPane>
    </children>
