Complete User Manage Form

--- a/src/main/resources/view/UserManageForm.fxml
+++ b/src/main/resources/view/UserManageForm.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.UserManageFormController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
@@ -13,11 +12,11 @@
             <TextField fx:id="txtId" layoutX="62.0" layoutY="88.0" promptText="Enter User ID" />
             <Label layoutX="236.0" layoutY="14.0" text="User Management Form" />
             <Label layoutX="63.0" layoutY="70.0" text="User ID" />
-            <Button layoutX="85.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" />
-            <Button layoutX="176.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
-            <Button layoutX="271.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
-            <Button layoutX="367.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Remove" />
-            <Button layoutX="464.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnSearchOnAction" text="Search" />
+            <Button layoutX="4.0" layoutY="5.0" mnemonicParsing="false" onAction="#btnBackOnAction" text="Home" />
+            <Button layoutX="131.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
+            <Button layoutX="226.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
+            <Button layoutX="322.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Remove" />
+            <Button layoutX="419.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnSearchOnAction" text="Search" />
             <TextField fx:id="txtAddress" layoutX="63.0" layoutY="205.0" promptText="Address" />
             <TextField fx:id="txtName" layoutX="62.0" layoutY="148.0" promptText="User Name" />
             <TextField fx:id="txtPassword" layoutX="339.0" layoutY="148.0" promptText="Password" />
@@ -26,6 +25,7 @@
             <Label layoutX="62.0" layoutY="188.0" text="Address" />
             <Label layoutX="339.0" layoutY="70.0" text="E-mail" />
             <Label layoutX="340.0" layoutY="131.0" text="Password" />
+            <Button layoutX="505.0" layoutY="350.0" mnemonicParsing="false" onAction="#btnReportOnAction" text="Report" />
          </children>
       </AnchorPane>
    </children>
