--- a/src/main/resources/view/MainForm.fxml
+++ b/src/main/resources/view/MainForm.fxml
@@ -3,13 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainFormController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Button layoutX="82.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnUserOnAction" text="User Form" />
-            <Button layoutX="195.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnBooksOnAction" text="Books Form" />
+            <Button layoutX="82.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnUserOnAction" text="User Registration Form" />
+            <Button layoutX="243.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnBooksOnAction" text="Books Manage Form" />
+            <Button layoutX="398.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnUserManageOnAction" text="UserManage Form" />
          </children>
       </AnchorPane>
    </children>
