--- a/src/main/resources/view/LibraryBranchManageForm.fxml
+++ b/src/main/resources/view/LibraryBranchManageForm.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.controller.LibraryBranchManageFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.LibraryBranchManageFormController">
+   <children>
+      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <Label layoutX="224.0" layoutY="14.0" text="Library Branch Manage Form" />
+            <TextField layoutX="69.0" layoutY="82.0" promptText="Library ID" />
+            <TextField layoutX="69.0" layoutY="158.0" promptText="Library Name" />
+            <TextField layoutX="303.0" layoutY="82.0" promptText="Location" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
