--- a/src/main/resources/view/UserManageForm.fxml
+++ b/src/main/resources/view/UserManageForm.fxml
@@ -4,28 +4,47 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.UserManageFormController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane prefHeight="650.0" prefWidth="1100.0">
          <children>
-            <TextField fx:id="txtId" layoutX="62.0" layoutY="88.0" promptText="Enter User ID" />
-            <Label layoutX="236.0" layoutY="14.0" text="User Management Form" />
-            <Label layoutX="63.0" layoutY="70.0" text="User ID" />
-            <Button layoutX="4.0" layoutY="5.0" mnemonicParsing="false" onAction="#btnBackOnAction" text="Home" />
-            <Button layoutX="131.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
-            <Button layoutX="226.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
-            <Button layoutX="322.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Remove" />
-            <Button layoutX="419.0" layoutY="278.0" mnemonicParsing="false" onAction="#btnSearchOnAction" text="Search" />
-            <TextField fx:id="txtAddress" layoutX="63.0" layoutY="205.0" promptText="Address" />
-            <TextField fx:id="txtName" layoutX="62.0" layoutY="148.0" promptText="User Name" />
-            <TextField fx:id="txtPassword" layoutX="339.0" layoutY="148.0" promptText="Password" />
-            <TextField fx:id="txtEmail" layoutX="339.0" layoutY="88.0" promptText="E-mail" />
-            <Label layoutX="62.0" layoutY="131.0" text="User Name" />
-            <Label layoutX="62.0" layoutY="188.0" text="Address" />
-            <Label layoutX="339.0" layoutY="70.0" text="E-mail" />
-            <Label layoutX="340.0" layoutY="131.0" text="Password" />
-            <Button layoutX="505.0" layoutY="350.0" mnemonicParsing="false" onAction="#btnReportOnAction" text="Report" />
+            <TextField fx:id="txtId" layoutX="277.0" layoutY="129.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter User ID" style="-fx-background-radius: 30;" />
+            <Label layoutX="376.0" layoutY="18.0" text="User Management Form">
+               <font>
+                  <Font name="System Bold" size="40.0" />
+               </font></Label>
+            <Label layoutX="295.0" layoutY="106.0" text="User ID">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Button layoutX="6.0" layoutY="8.0" mnemonicParsing="false" onAction="#btnBackOnAction" prefHeight="45.0" prefWidth="83.0" text="Home" />
+            <Button layoutX="371.0" layoutY="418.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Update" />
+            <Button layoutX="478.0" layoutY="420.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Clear" />
+            <Button layoutX="589.0" layoutY="418.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Remove" />
+            <Button layoutX="712.0" layoutY="421.0" mnemonicParsing="false" onAction="#btnSearchOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Search" />
+            <TextField fx:id="txtAddress" layoutX="275.0" layoutY="295.0" prefHeight="45.0" prefWidth="260.0" promptText="Address" style="-fx-background-radius: 30;" />
+            <TextField fx:id="txtName" layoutX="275.0" layoutY="214.0" prefHeight="45.0" prefWidth="260.0" promptText="User Name" style="-fx-background-radius: 30;" />
+            <TextField fx:id="txtPassword" layoutX="710.0" layoutY="210.0" prefHeight="45.0" prefWidth="260.0" promptText="Password" style="-fx-background-radius: 30;" />
+            <TextField fx:id="txtEmail" layoutX="705.0" layoutY="127.0" prefHeight="45.0" prefWidth="260.0" promptText="E-mail" style="-fx-background-radius: 30;" />
+            <Label layoutX="296.0" layoutY="189.0" text="User Name">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label layoutX="302.0" layoutY="270.0" text="Address">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label layoutX="725.0" layoutY="105.0" text="E-mail">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label layoutX="727.0" layoutY="185.0" text="Password">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Button layoutX="826.0" layoutY="420.0" mnemonicParsing="false" onAction="#btnReportOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Report" />
          </children>
       </AnchorPane>
    </children>
