--- a/src/main/resources/view/userRegistrationForm.fxml
+++ b/src/main/resources/view/userRegistrationForm.fxml
@@ -4,25 +4,44 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.UserRegistrationFormController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane prefHeight="650.0" prefWidth="1100.0">
          <children>
-            <Label layoutX="255.0" layoutY="14.0" text="User Registration" />
-            <TextField fx:id="txtName" layoutX="118.0" layoutY="143.0" prefHeight="25.0" prefWidth="189.0" promptText="Enter your name" />
-            <TextField fx:id="txtPassword" layoutX="358.0" layoutY="143.0" prefHeight="25.0" prefWidth="189.0" promptText="Enter your password" />
-            <TextField fx:id="txtEmail" layoutX="358.0" layoutY="85.0" prefHeight="25.0" prefWidth="189.0" promptText="Enter your e-mail address" />
-            <Label layoutX="118.0" layoutY="126.0" text="Name" />
-            <Label layoutX="362.0" layoutY="126.0" text="Password" />
-            <Label layoutX="362.0" layoutY="68.0" text="E-mail" />
-            <Button layoutX="255.0" layoutY="275.0" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" />
-            <Button layoutX="325.0" layoutY="275.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
-            <TextField fx:id="txtId" layoutX="118.0" layoutY="86.0" prefHeight="25.0" prefWidth="189.0" promptText="Enter your id" />
-            <Label layoutX="120.0" layoutY="68.0" text="User ID" />
-            <TextField fx:id="txtAddress" layoutX="118.0" layoutY="199.0" prefHeight="25.0" prefWidth="189.0" promptText="Enter your address" />
-            <Label layoutX="118.0" layoutY="182.0" text="Address" />
-            <Button layoutX="5.0" layoutY="4.0" mnemonicParsing="false" onAction="#btnHomeOnAction" text="Home" />
+            <Label layoutX="442.0" layoutY="22.0" text="User Registration">
+               <font>
+                  <Font name="System Bold" size="40.0" />
+               </font></Label>
+            <TextField fx:id="txtName" layoutX="309.0" layoutY="293.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter your name" />
+            <TextField fx:id="txtPassword" layoutX="696.0" layoutY="299.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter your password" />
+            <TextField fx:id="txtEmail" layoutX="693.0" layoutY="186.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter your e-mail address" />
+            <Label layoutX="316.0" layoutY="261.0" text="Name">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label layoutX="711.0" layoutY="272.0" text="Password">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label layoutX="700.0" layoutY="154.0" text="E-mail">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Button layoutX="533.0" layoutY="505.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Save" />
+            <Button layoutX="640.0" layoutY="505.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Clear" />
+            <TextField fx:id="txtId" layoutX="313.0" layoutY="188.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter your id" />
+            <Label layoutX="313.0" layoutY="153.0" text="User ID">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <TextField fx:id="txtAddress" layoutX="308.0" layoutY="389.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter your address" />
+            <Label layoutX="313.0" layoutY="357.0" text="Address">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Button layoutX="7.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnHomeOnAction" prefHeight="45.0" prefWidth="83.0" text="Home" />
          </children>
       </AnchorPane>
    </children>
