--- a/src/main/resources/view/PlaceOrderForm.fxml
+++ b/src/main/resources/view/PlaceOrderForm.fxml
@@ -6,16 +6,18 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="690.0" prefWidth="1325.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.PlaceOrderFormController">
+<AnchorPane prefHeight="650.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.PlaceOrderFormController">
    <children>
       <Pane prefHeight="700.0" prefWidth="677.0" style="-fx-background-color: blue;">
          <children>
-            <Button fx:id="btnAddToCart" layoutX="444.0" layoutY="482.0" mnemonicParsing="false" onAction="#btnAddToCartOnAction" text="Add To Cart" />
-            <Button layoutX="313.0" layoutY="600.0" mnemonicParsing="false" onAction="#btnPlaceOrderOnAction" text="Place Order" />
+            <Button fx:id="btnAddToCart" layoutX="467.0" layoutY="543.0" mnemonicParsing="false" onAction="#btnAddToCartOnAction" text="Add To Cart" />
+            <Button layoutX="306.0" layoutY="623.0" mnemonicParsing="false" onAction="#btnPlaceOrderOnAction" text="Place Order" />
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnHomeOnAction" text="Home" />
          </children>
       </Pane>
       <Label fx:id="lblOrderId" layoutX="220.0" layoutY="123.0" prefHeight="32.0" prefWidth="118.0">
@@ -71,10 +73,13 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <TableView fx:id="tblOrderCart" layoutX="710.0" layoutY="457.0" prefHeight="200.0" prefWidth="383.0">
+      <TableView fx:id="tblOrderCart" layoutX="710.0" layoutY="457.0" prefHeight="200.0" prefWidth="603.0">
         <columns>
           <TableColumn fx:id="colBookId" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="colBookName" prefWidth="75.0" text="Book Name" />
+            <TableColumn fx:id="colTotal" prefWidth="75.0" text="Total" />
+            <TableColumn fx:id="colQty" prefWidth="75.0" text="Qty" />
+            <TableColumn fx:id="colUnitPrice" prefWidth="75.0" text="Unit Price" />
             <TableColumn fx:id="colAction" prefWidth="75.0" text="Action" />
         </columns>
       </TableView>
@@ -86,6 +91,36 @@
       <Label fx:id="lblOrderDate" layoutX="484.0" layoutY="120.0" prefHeight="26.0" prefWidth="118.0">
          <font>
             <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="445.0" layoutY="373.0" text="Unit Price:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblUnitPrice" layoutX="522.0" layoutY="371.0" prefHeight="26.0" prefWidth="80.0">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="451.0" layoutY="464.0" text="Qty:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtQty" layoutX="503.0" layoutY="464.0" onAction="#txtQtyOnAction" prefHeight="21.0" prefWidth="63.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor>
+      </TextField>
+      <Label layoutX="154.0" layoutY="547.0" text="Net Total:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblNetTotal" layoutX="232.0" layoutY="542.0" prefHeight="32.0" prefWidth="126.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="17.0" />
          </font>
       </Label>
    </children>
